[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/MainScene.gd" id="1"]
[ext_resource type="Script" path="res://scripts/FilterOverlay.gd" id="2"]
[ext_resource type="Script" path="res://scripts/CanvasEditor.gd" id="3"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1")

[node name="WebcamDisplay" type="Sprite2D" parent="."]
position = Vector2(640, 360)
scale = Vector2(1, 1)

[node name="BBoxRect" type="ColorRect" parent="."]
offset_right = 100.0
offset_bottom = 100.0
color = Color(0, 1, 0, 0.3)
visible = false

[node name="FilterOverlay" type="Sprite2D" parent="."]
position = Vector2(640, 360)
script = ExtResource("2")

[node name="CanvasEditor" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 720.0
script = ExtResource("3")

[node name="DrawingCanvas" type="Panel" parent="CanvasEditor"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 600.0

[node name="UI" type="VBoxContainer" parent="CanvasEditor"]
layout_mode = 0
offset_top = 610.0
offset_right = 400.0
offset_bottom = 720.0

[node name="ColorPicker" type="ColorPickerButton" parent="CanvasEditor/UI"]
layout_mode = 2
text = "Choose Color"

[node name="ClearButton" type="Button" parent="CanvasEditor/UI"]
layout_mode = 2
text = "Clear Canvas"

[node name="SaveButton" type="Button" parent="CanvasEditor/UI"]
layout_mode = 2
text = "Save Filter"

[node name="UI" type="CanvasLayer" parent="."]

[node name="StatusLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 400.0
offset_bottom = 40.0
text = "Initializing..."
